--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 
     <div class="container-fluid bg-body-tertiary my-4">
-      <div class="row align-items-center py-3 ms-5">
+      <div class="row align-items-center py-3 ">
         <div class="col-lg-7">
            <h2>Eum ipsam laborum deleniti velit <span class="fw-bolder span-2">pariatur architecto aut nihil</span></h2>
         <p class="fs-5 py-2 text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sequi accusamus qui eum, officia aperiam.</p>
