--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
     </div>
 
-    <section class="container py-xl-3 py-3">
+    <section class="container py-xl-3">
       <h2 class="text-uppercase text-center fw-bold about-h2">About us</h2>
       <div class="first-line">
         <div class="second-line"></div>
@@ -135,7 +135,7 @@
 
     <div class="container-fluid bg-body-tertiary my-4">
       <div class="row align-items-center py-3 ">
-        <div class="col-lg-7">
+        <div class="col-lg-7 px-xl-5">
            <h2>Eum ipsam laborum deleniti velit <span class="fw-bolder span-2">pariatur architecto aut nihil</span></h2>
         <p class="fs-5 py-2 text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sequi accusamus qui eum, officia aperiam.</p>
         <div class="accordion" id="accordionExample">
@@ -201,69 +201,176 @@
           <h4 class="text-uppercase">html</h4>
           <h4>100%</h4>
         </div>
-        <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="12" aria-valuemin="0" aria-valuemax="100">
-      <div class="progress-bar" style="width: 100%;"></div>
+        <div class="progress rounded-0" role="progressbar" aria-label="Basic example" aria-valuenow="12" aria-valuemin="0" aria-valuemax="100">
+      <div class="progress-bar progress-color" style="width: 100%;"></div>
     </div>
         <div class="progress-heading">
           <h4 class="text-uppercase">css</h4>
           <h4>90%</h4>
         </div>
-        <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="12" aria-valuemin="0" aria-valuemax="100">
-      <div class="progress-bar" style="width: 90%;"></div>
+        <div class="progress rounded-0" role="progressbar" aria-label="Basic example" aria-valuenow="12" aria-valuemin="0" aria-valuemax="100">
+      <div class="progress-bar progress-color" style="width: 90%;"></div>
     </div>
         <div class="progress-heading">
           <h4 class="text-uppercase">javascript</h4>
           <h4>75%</h4>
         </div>
-        <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="12" aria-valuemin="0" aria-valuemax="100">
-      <div class="progress-bar"style="width: 75%;"></div>
+        <div class="progress rounded-0" role="progressbar" aria-label="Basic example" aria-valuenow="12" aria-valuemin="0" aria-valuemax="100">
+      <div class="progress-bar progress-color"style="width: 75%;"></div>
     </div>
         <div class="progress-heading">
           <h4 class="text-uppercase">photoshop</h4>
           <h4>55%</h4>
         </div>
-        <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="12" aria-valuemin="0" aria-valuemax="100">
-      <div class="progress-bar"style="width: 90%;"></div>
+        <div class="progress rounded-0" role="progressbar" aria-label="Basic example" aria-valuenow="12" aria-valuemin="0" aria-valuemax="100">
+      <div class="progress-bar progress-color"style="width: 90%;"></div>
     </div>
       </div>
     </div>
     </div>
 
-    <section class="container-fluid bg-body-tertiary">
-      <div class="Services">
+    <section class="container-fluid bg-body-tertiary py-xl-5 py-3">
+      <div class="container">
          <h2 class="text-uppercase text-center fw-bold about-h2">Services</h2>
       <div class="first-line">
         <div class="second-line"></div>
       </div>
-      <p class="text-center py-5">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      <div class="row px-5">
-      <div class="col-lg-3 shadow">
+      <p class="text-center py-4">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+      <div class="container px-4">
+      <div class="row px-5 border-0">
+
+        <div class="col-xl-3 col-lg-6 shadow first-card border-0 py-4 px-4 my-4 mx-0.5">
+        <div class="cards mt-4 border-0">
         <div class="logo">
           <img src="hero-img.png" width="30%" alt="">
         </div>
-        <h3>Lorem ipsum</h3>
+        <h3 class="text-blue py-2">Lorem ipsum</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, et?</p>
       </div>
-      <div class="col-lg-3 shadow">
+      </div>
+        <div class="col-xl-3 col-lg-6 shadow first-card border-0 py-4 px-4 my-4 mx-0.5">
+        <div class="cards mt-4 border-0">
         <div class="logo">
           <img src="hero-img.png" width="30%" alt="">
         </div>
-        <h3>Lorem ipsum</h3>
+        <h3 class="text-blue py-2">Lorem ipsum</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, et?</p>
       </div>
-      <div class="col-lg-3 shadow">
+      </div>
+        <div class="col-xl-3 col-lg-6 shadow first-card border-0 py-4 px-4 my-4 mx-0.5">
+        <div class="cards mt-4 border-0">
         <div class="logo">
           <img src="hero-img.png" width="30%" alt="">
         </div>
-        <h3>Lorem ipsum</h3>
+        <h3 class="text-blue py-2">Lorem ipsum</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, et?</p>
       </div>
-      <div class="col-lg-3 shadow">
+      </div>
+        <div class="col-xl-3 col-lg-6 shadow first-card border-0 py-4 px-4 my-4 mx-0.5">
+        <div class="cards mt-4 border-0">
         <div class="logo">
           <img src="hero-img.png" width="30%" alt="">
         </div>
-        <h3>Lorem ipsum</h3>
+        <h3 class="text-blue py-2">Lorem ipsum</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, et?</p>
+      </div>
+      </div>
+     
+      
+      </div>
+      </div>
+      </div>
+    </section>
+
+
+
+
+
+    <div class="container py-xl-5 py-3">
+      <h2 class="text-center fw-bold text-blue text-uppercase">Work process</h2>
+      <div class="first-line">
+        <div class="second-line"></div>
+      </div>
+      <p class="text-center mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, dolorem.</p>
+
+      <div class="row">
+        <div class="col-lg-4 work-card  py-md-3">
+          <div class="card shadow border-0">
+            <img src="https://bootstrapmade.com/content/demo/Arsha/assets/img/steps/steps-1.webp" width="100%" alt="">
+            <div class="content px-4" style="margin-top: -50px;">
+              <h4 class="bg-info rounded-circle d-flex justify-content-center align-items-center m-0 fw-bold text-white" style="width: 50px; height: 50px;">01</h4>
+              <h3 class="text-blue fw-bold">Research & Analysis</h3>
+              <p class="text-secondary">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione.</p>
+              <ul class="list-unstyled">
+                <li>
+                  <i class="bi bi-check-circle text-info"></i> Market Research
+                </li>
+                <li>
+                    <i class="bi bi-check-circle text-info"></i> Data Analysis
+                  </li>
+                <li>
+                    <i class="bi bi-check-circle text-info"></i> User Feedback
+                  </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 work-card  py-md-3">
+          <div class="card shadow border-0">
+            <img src="https://bootstrapmade.com/content/demo/Arsha/assets/img/steps/steps-2.webp" width="100%" alt="">
+            <div class="content px-4 py-2" style="margin-top: -50px;">
+              <h4 class="bg-info rounded-circle d-flex justify-content-center align-items-center m-0 fw-bold text-white" style="width: 50px; height: 50px;">02</h4>
+              <h3 class="text-blue fw-bold">Design & Planning</h3>
+              <p class="text-secondary">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
+              <ul class="list-unstyled">
+                <li>
+                  <i class="bi bi-check-circle text-info"></i> Wireframing
+                </li>
+                <li>
+                    <i class="bi bi-check-circle text-info"></i> UI/UX Design
+                  </li>
+                <li>
+                    <i class="bi bi-check-circle text-info"></i> Prototyping
+                  </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 work-card  py-md-3">
+          <div class="card shadow border-0">
+            <img src="https://bootstrapmade.com/content/demo/Arsha/assets/img/steps/steps-1.webp" width="100%" alt="">
+            <div class="content px-4 py-2" style="margin-top: -50px;">
+              <h4 class="bg-info rounded-circle d-flex justify-content-center align-items-center m-0 fw-bold text-white" style="width: 50px; height: 50px;">03</h4>
+              <h3 class="text-blue fw-bold">Development & Launch</h3>
+              <p class="text-secondary">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis cumque nihil.</p>
+              <ul class="list-unstyled">
+                <li>
+                  <i class="bi bi-check-circle text-info"></i>Development
+                </li>
+                <li>
+                    <i class="bi bi-check-circle text-info"></i> Testing
+                  </li>
+                <li>
+                    <i class="bi bi-check-circle text-info"></i>Deployment
+                  </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+    <section class="container-fluid bg-image-section">
+      <div class="container py-xl-3">
+        <div class="row align-items-center py-5">
+      <div class="col-lg-8 col-md-7">
+        <h2 class="text-white fw-bold">Call To Action</h2>
+       <p class="text-white fw-semibold"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="col-lg-4 col-md-5">
+      <button class="btn btn-outline-info rounded-pill text-white px-5">Call To Action</button>
       </div>
       </div>
       </div>
