--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
       </div>
       <p class="text-center mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, dolorem.</p>
 
-      <div class="row">
-        <div class="col-lg-4 work-card  py-md-3">
+      <div class="row py-3 align-items-center">
+        <div class="col-lg-4 work-card py-sm-3">
           <div class="card shadow border-0">
             <img src="https://bootstrapmade.com/content/demo/Arsha/assets/img/steps/steps-1.webp" width="100%" alt="">
             <div class="content px-4" style="margin-top: -50px;">
@@ -336,7 +336,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 work-card  py-md-3">
+        <div class="col-lg-4 work-card  py-sm-4">
           <div class="card shadow border-0">
             <img src="https://bootstrapmade.com/content/demo/Arsha/assets/img/steps/steps-1.webp" width="100%" alt="">
             <div class="content px-4 py-2" style="margin-top: -50px;">
