--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       </div>
       <p class="text-center py-4">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       <div class="container px-4">
-      <div class="row px-5 border-0">
+      <div class="row px-5 border-0 py-xl-3">
 
         <div class="col-xl-3 col-lg-6 shadow first-card border-0 py-4 px-4 my-4 mx-0.5">
         <div class="cards mt-4 border-0">
@@ -315,7 +315,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 work-card  py-md-3">
+        <div class="col-lg-4 work-card  py-3">
           <div class="card shadow border-0">
             <img src="https://bootstrapmade.com/content/demo/Arsha/assets/img/steps/steps-2.webp" width="100%" alt="">
             <div class="content px-4 py-2" style="margin-top: -50px;">
@@ -336,7 +336,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 work-card  py-sm-4">
+        <div class="col-lg-4 work-card  py-4">
           <div class="card shadow border-0">
             <img src="https://bootstrapmade.com/content/demo/Arsha/assets/img/steps/steps-1.webp" width="100%" alt="">
             <div class="content px-4 py-2" style="margin-top: -50px;">
@@ -363,8 +363,8 @@
 
 
     <section class="container-fluid bg-image-section">
-      <div class="container py-xl-3">
-        <div class="row align-items-center py-5">
+      <div class="container py-xl-3 py-3">
+        <div class="row align-items-center py-5 mt-4">
       <div class="col-lg-8 col-md-7">
         <h2 class="text-white fw-bold">Call To Action</h2>
        <p class="text-white fw-semibold"> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
