--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@
           
             <footer class="container mt-5">
               <div class="row">
-                          <div class="col-lg-3 mb-2">
+                          <div class="col-lg-3 mb-2 col-md-6 col-6">
                             <h2 class="text-blue text-uppercase fw-bold">Arsha</h2>
                             <div class="">
                               <p class="m-0">A108 Adam Street</p>
@@ -996,7 +996,7 @@
                           </div>
 
                           
-                          <div class="col-lg-3 mb-2">
+                          <div class="col-lg-3 mb-2 col-md-6 col-6">
                             <p class="text-blue text-uppercase fs-5 fw-semibold">Useful Links</p>
                             <div class="d-flex flex-column text-decoration-none gap-2">
                              </i><a href="" class="text-decoration-none text-secondary"><i class="bi bi-chevron-right text-info"> </i>Home</a>
@@ -1007,7 +1007,7 @@
                           </div>
 
 
-                          <div class="col-lg-3 mb-2">
+                          <div class="col-lg-3 mb-2 col-md-6 col-6 col-md-6 col-6">
                             <p class="text-blue text-uppercase fw-bold">Our Services</p>
                              <div class="d-flex flex-column text-decoration-none gap-2">
                              </i><a href="" class="text-decoration-none text-secondary"><i class="bi bi-chevron-right text-info"> </i>Web Design</a>
@@ -1017,7 +1017,7 @@
                             </div>
                           </div>
 
-                          <div class="col-lg-3 mb-2">
+                          <div class="col-lg-3 mb-2 col-md-6 col-6 col-md-6 col-6">
                             <p class="text-blue text-uppercase fw-bold">Follow Us</p>
                             <p class="text-secondary-emphasis">Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
                             <div class="follow-icon d-flex gap-3 fs-5 text-center px-5 text-secondary botder-1 ">
